--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,17 @@ jobs:
         with:
           java-version: 11
       - name: Build
-        run: ./mvnw verify -B
+          run: |
+            ls -lha
+          ./mvnw clean package -Dquarkus.package.type=uber-jar -B
+#      - name: install ssh key
+#          uses: webfactory/ssh-agent@v0.4.1
+#          with:
+#            ssh-private-key: ${{ secrets.ORAVM }}
+#      - name: create .ssh/known_hosts
+#          run: |
+#            ssh-keyscan -H -t rsa -v 158.101.167.157  >> ~/.ssh/known_hosts
+#      - name: copy binaries to oravm
+#          run: |
+#            echo "Hallo ich bin hier"
+#            ls -l target/
